fix overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
 body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
   font-family: sans-serif;
   background-color: #e6edf3
 }
